--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -62,6 +62,7 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 768px;
   }
